# free-rtos-fault-injection-simulator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  License.md  README.md  compile_win32.bat  compute_mean_delay.py  input-large.csv  input.csv  run_posix.sh  run_win32.bat  script.sh
.github/workflows/: cmake.yml
FreeRTOS/: CMakeLists.txt
FreeRTOS/Source/: tasks.c  timers.c
FreeRTOS/Source/include/: task.h
FreeRTOS/Source/injector/: common.c
FreeRTOS/Source/injector/include/: injector.h
FreeRTOS/Source/portable/MSVC-MingW/: port.c
simulator/: FreeRTOSConfig.h  fork.h  loggingUtils.c  loggingUtils.h  main.c  main_blinky.c  simulator.h  sleep.h  thread.h
simulator/Posix/: asm.h  fork.c  fork_internal.h  sleep.c  thread.c  thread_internal.h
simulator/Win32/: Run-time-stats-utils.c  asm.h  fork.c  fork_internal.h  sleep.c  thread.c  thread_internal.h
simulator/benchmark/: benchmark.c  benchmark.h
simulator/injection/: common.c  injection.c
simulator/injection/include/: injector.h
